Test check for WP

--- a/later/index.html
+++ b/later/index.html
@@ -6,9 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<form action="index.php" method="get">
-		<input type="text" name="url"><br>
-		<button type="submit">Send</button>
-	</form>
+	<div class="main-container-full">
+		<h2 class="heading_main">Check website CMS</h2>
+		<form action="" method="get" class="main-form">
+			<input type="text" name="val1" placeholder="Website url"><br>
+			<button type="submit" name="submit">Send</button>
+		</form>
+	</div>
 </body>
 </html>
